MDEV-259 audit plugin does not see sub-statements